...
        <KeleyaTitle text={t('initial_title')} />
      </View>

      <View style={[styles.subContainer, {bottom: 30}]}>
        <KeleyaBigButton
          title={t('get_started')}
          testId={'get-started-btn'}
          buttonPress={() => navigation.navigate('Signup')}
        />
        <TouchableOpacity
          testID={'login-btn'}
          onPress={() => navigation.navigate('Signin')}>
          <Text style={styles.btnLogin}>{t('or_login')}</Text>
        </TouchableOpacity>
      </View>
    </ImageBackground>
  );
...
