...

  const handleConfirm = (pickedDate: any) => {
    hideDatePicker();
    setCurrentDate(moment(pickedDate).format('MMM DD YYYY'));
  };
  return (
    <View testID="date-screen" style={styles.mainContainer}>
      <Image
        style={styles.imageDueDate}
        source={require('../Assets/Images/due-date-background-image.jpg')}
      />
      <View>
        <KeleyaTitle text={t('title_date_screen')} color="#000" />
...
          currentDate={currentDate}
          handleConfirm={handleConfirm}
          showDatePicker={showDatePicker}
          isDatePickerVisible={isDatePickerVisible}
          hideDatePicker={hideDatePicker}
          testId={'date-picker'}
          btnTestId={'show-date-picker-btn'}
        />
      </View>
      <View style={styles.bottomView}>
        <KeleyaBigButton
          testId="continue-btn"
          buttonPress={() => setUDate()}
...
