...
      setButtonColor(colors.WARM_GREY);
      setDisabled(true);
    }
  }, [name]);
  return (
    <KeyboardAwareScrollView
      testID="name-screen"
      contentContainerStyle={styles.mainContainer}>
      <View>
        <Image
          style={styles.bgImg}
          source={require('../Assets/Images/couch_smile.jpg')}
        />
        <KeleyaTitle size={24} text={t('title_name_screen')} />
        <KeleyaTextInput
          value={name}
          testId="name-input"
          onValueChange={(value: string) => setName(value)}
          placeholder={t('your_name')}
          additionalStyles={styles.inputName}
        />
      </View>
      <View style={styles.bottomView}>
...
